--- a/src/styles/beers/_hero.scss
+++ b/src/styles/beers/_hero.scss
@@ -5,6 +5,16 @@
   display: flex;
   min-height: calc(320px + 62px);
   background-color: #1b1d1e;
+  position: relative;
+
+  &:before {
+    height: 7px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    background: $lightBrown;
+    content: '';
+  }
 
   &-title {
     font-size: 64px;
