--- a/src/styles/main/_main.scss
+++ b/src/styles/main/_main.scss
@@ -2,34 +2,48 @@
   position: relative;
   display: flex;
   flex-flow: column;
+}
+
+.section {
+  position: relative;
+  z-index: 1;
+  background: $white;
+  padding-top: 60px;
+  padding-bottom: 100px;
+}
+
+.animated-page-wrapper {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
+}
 
-  .wrapper {
-    position: relative;
-    overflow-x: hidden;
-    padding-bottom: 62px;
-    height: 100%;
-    z-index: 1;
+.wrapper {
+  position: relative;
+  overflow-x: hidden;
+  background: $cream;
+  padding-bottom: 60px;
+}
 
-    .animated-page-wrapper {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
+.btn-explore {
+  text-align: center;
 
-    .page {
-      position: relative;
-      background: $white;
-    }
+  .btn {
+    background: $cream;
+    border-color: $cream;
+    color: $darkBrown;
+    font-weight: 600;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    font-size: 14px;
+    height: 60px;
+    min-width: 220px;
 
-    .section {
-      position: relative;
-      z-index: 1;
-      padding-top: 60px;
-      padding-bottom: 100px;
-      background: $white;
+    &:hover {
+      background: $lightBrown;
     }
   }
 }
+
